fix horizontal scrollbar

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,6 +7,7 @@ html {
   scroll-behavior: smooth;
 }*/
 
+
  /* Style buttons */
  .btn {
     width: 100%;
@@ -106,7 +107,6 @@ h2 {
 
 
 .sep{
-    width: 100vw;
     height: 2px;
     background-color: var(--color);
 }
